--- a/finite.tex
+++ b/finite.tex
@@ -829,7 +829,7 @@ Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2
 
 One can ask, then, whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above, since an $E$ that detects nilpotence cannot send such a nontrivial self-map to zero.  In fact, we found one such $E$ already:
 
-\begin{theorem}[Devinatz--Hopkins--Smith]\label{DevinatzHopkinsSmith}\citeme{Devinatz, Hopkins, Smith}
+\begin{theorem}[{\cite[Theorem 1.i]{DHS}}]\label{DevinatzHopkinsSmith}
 Complex cobordism $MU$ detects nilpotence. \qed
 \end{theorem}
 
