fixes some typos late in the document

--- a/preamble.tex
+++ b/preamble.tex
@@ -111,7 +111,7 @@
 \newcommand{\barG}{\overline{\mathbb G}}
 \newcommand{\RP}{\R\mathrm P}
 \newcommand{\CP}{\C\mathrm P}
-\newcommand{\HP}{\H\mathrm P}
+\newcommand{\HP}{\mathbb H\mathrm P}
 \newcommand{\FH}{\textbf{FH}}
 \newcommand{\CH}{\textbf{CH}}
 \renewcommand{\t}{\mathbf t}
