--- a/quillen.tex
+++ b/quillen.tex
@@ -602,7 +602,7 @@ This defines the \textit{external $n${\th} Steenrod power of $f$}.  Employing th
 
 \todo{This is pretty much the definition of an $H_\infty$ ring spectrum, but this is not enough to extract power operations on positive-degree classes.  There, you want compatible systems of maps like $(\Susp^j E)^{\sm n}_{h\Sigma_n} \to \Susp^{nj} E$.  In general, you get such systems only for all $j$ which are divisible by some fixed $d$, and the resulting mess is called an $H_\infty^d$--structure.  For example, $KU$ has an $H_\infty^2$--structure and $KO$ has an $H_\infty^8$--structure.  My suspicion with Nat is that power operation maps come from applying the power operation functor to the identity class in $[E, E]$, and that the $H_\infty^d$--structures on these two spectra come from applying the power operation functor to the autoequivalence supplied by the relevant Bott element.}
 
-\begin{remark}
+\begin{remark}\label{RemarkSteenrodOpnsAreNotStable}
 This assignment \[\left\{ \Susp^\infty_+ X \to MU \right\} \xrightarrow{P^n} \left\{ \Susp^\infty_+ X \sm \Susp^\infty_+ BC_n \to MU \right\}\] extends to a map of function spaces\todo{Is this right? You can't interpret the image of an element of $\pi_{2r}$ on the left as being the power operation applied to another cohomology class, since you'd expect the image to lie in degree $\pi_{2nr}$.} \[\CatOf{Spaces}(X, MU) \xrightarrow{P^n} \CatOf{Spaces}(X \times BC_n, MU).\]  However, this is \emph{not} an infinite loop map, i.e., it does \emph{not} descend from a map of function spectra.  The basic obstruction is that power operations are not additive, which is what the infinite loopspace structure governs, but rather satisfy a kind of binomial theorem~\cite[pg.\ 25]{BMMS}.
 \end{remark}
 
@@ -725,8 +725,9 @@ w^m \sigma^{2m} P^n(f) & = P^n(\sigma^{2m} f) = P^n(g^* u_{m+q}) = g^* P^n(u_{m+
 Our conclusion, then, is that $P^n$ is \emph{almost} naturally expressible in terms of the Landweber--Novikov operations, where the ``\emph{almost}'' is controlled by some $w$--torsion.  Additionally, the various factors in this statement --- including $w$ itself --- are controlled by the formal group law ``$+_{MU}$'' associated to the tautological complex orientation of $MU$ and the subring $C$.
 
 \begin{remark}
-\todo[inline]{You can put a remark here about how power operations become additive after passing to the Tate construction, now that you sort of understand this.  Or, you can put a forward reference in to where you're going to talk about this, way out in the Power Operations chapter.  Actually, probably do both: mention it in passing and put in ``cf.''.}
+The target of the Steenrod operation \[P^n\co F(X, \Susp^{2m} MU) \to F(X_{hC_n}, \Susp^{2nm} MU)\] can be reidentified as \[F(X_{hC_n}, \Susp^{2nm} MU) \simeq F(X, \Susp^{2nm} MU)^{hC_n}.\]  For any $C_n$--equivariant spectrum $X$, there is a special map called the \textit{transfer map}\citeme{Greenlees--May?} \[X_{hC_n} \to X^{hC_n} \xrightarrow{\operatorname{cofib}} X^{tC_n}\] whose cofiber is called a \textit{Tate spectrum}.  The construction of Tate spectra is \emph{homological}\todo{Does this require $n$ to be prime?}: cofiber sequences of spaces are sent to cofiber sequences of Tate spectra, and hence there is a natural \emph{stable} (cf.\ \Cref{RemarkSteenrodOpnsAreNotStable}) map \[F(X, \Susp^{2m} MU) \to F(X, \Susp^{2nm} MU)^{tC_n}.\]  In this setting, passing to the Tate construction has the effect of inverting $t$ on homotopy\citeme{Greenlees--May?}, and so this is a homotopical witness to a generic kind of relation expressed in \Cref{QuillensKeyRelation}: the Steenrod operations become stable after multiplication by huge powers of $t$.  The method described here gives a precise formula for the relationship, and in the proof of \Cref{CGenerationForFiniteCplx} in the next Lecture we will discover the surprising fact that we only need to multiply by a \emph{single} $t$.
 \end{remark}
+
 
 
 
@@ -884,11 +885,6 @@ The ring $\pi_*(MU \sm MU)$ carries the universal example of two strictly isomor
 \begin{proof}
 Combine \Cref{OrientationsOnEAndMU} and \Cref{QuillensTheorem}.
 \end{proof}
-
-
-
-\todo[inline]{\textbf{This todo belongs in the Remark at the end of 2.5 / in the footnote of 2.6.1 / in an appendix. Not here.} There's buzz about a ``Frobenius map'' for structured rings going around these days. I guess the point is that an $E_2$--algebra structure is enough to get a multiplicative map $E^0 X \to E^0 X \otimes E^0 BC_p$. This isn't additive, so it can't come from an infinite loop map, but it becomes additive when passing to the Tate construction: $E^X \to (E^X)^{tC_p}$, using the fact that the genuine $C_p$ fixed points of $E^{X^{\times p}}$ is $E^X$, and the square relating genuine, homotopy, and geometric fixed points.  Mike has been claiming that these results of Quillen's can be interpreted in this way, but I'm not sure what the interpretation is.  He says it has something to do with inverting the Euler class and the part of Quillen's argument that involves walking down the multiples of Euler classes on both sides of the equation.}
-
 
 
 
