--- a/unknowns.tex
+++ b/unknowns.tex
@@ -98,13 +98,27 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 Describe Dieudonn\'e crystals and the Tapis de Cartier.
 
-Show how Dieudonn\'e crystals are used to give formulas for the action of the stabilizer group.
+Show how Dieudonn\'e crystals are used to give formulas for the action of the stabilizer group~\cite{DevinatzHopkins}.
 
-Give a sketch explanation of the Gross--Hopkins period map.
+Give a sketch explanation of the Gross--Hopkins period map~\cite{Weinstein}.
 
-Draw the picture of the period map at $n = 2$, $p = 2$.
+Draw the picture of the period map at $n = 2$, $p = 2$.  The main reference for this, except for the literal picture, is~\cite[Appendix 25]{HopkinsGrossEquivVBs}.
+\begin{itemize}
+\item The center of the $\Z_{p^2}$--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an $\mathcal O_A$--module structure.  It has $\pi$--series $[\pi](x) = \pi x + x^{q^2}$.
+\item There are three nontrivial points in $\G[2]$: $\alpha$, $\beta$, and $\alpha + \beta$.  Quotienting by them gives three points at order $1/(q+1)$, the first bunch of ``quasicanonical lifts'', which have partial formal $\mathcal O_A$--module structures.
+\item At each quasicanonical point, you also also form three quotients: two of them make the situation ``worse'', and one of them makes the situation ``better''.  This has to do with the identification $\G / \G[2] \cong \G$.
+\item Computing these orders has to do with the Newton polygon associated to the $\pi$--series.
+\item The canonical Frobenius $F_{can} = \left[ \begin{array}{cc} 0 & p \\ 1 & 0 \end{array} \right]$ first flips the two coordinates (and scales one by $p$), then flips them back (and scales the other by $p$), and after two flips scaling everything by $p$ scales back down by homogeneous coordinates.
+\item Out to order $1/q$, $\pi_{GH}$ is injective.
+\item The group $\F_4^\times$ should act by rotation on $\mathbb P^1$.
+\item The map $\pi_{GH}$ sends the canonical lift to $0 = [1:0]$, sends the first order quasicanonical points to $\infty = [0:1]$, and alternates from there.  The three branches of ``directions to quotient'' carve $\mathbb P^1$ up into three lobes.  This is because $\pi_{GH}$ is equivariant for \emph{isogenies}, and quotienting by one of these order $2$ subgroups is a lift of the Frobenius isogeny on the residue formal group.
+\item These quasicanonical points are the ones with nontrivial stabilizers under the action by the Morava stabilizer group --- all the other points belong to free orbits.  (The canonical lift has the largest stabilizer of all.)
+\end{itemize}
 
-State the topological conclusion about $E_\Gamma \mathbb I_{\Q/\Z}$.
+\begin{theorem}\citeme{\cite{HopkinsGrossAnnouncement,StricklandGHDuality}}
+\todo{Make sure you get this right.}
+The sheaf $\context{E_\Gamma}(\mathbb I_{\Q/\Z})$ is the dualizing sheaf on $(\moduli{fg})^\wedge_\Gamma$. \qed
+\end{theorem}
 
 
 
