figured out how to draw a sphere down in the period map section. still doesn’t have the rest of the picture

--- a/preamble.tex
+++ b/preamble.tex
@@ -19,7 +19,7 @@
 \usepackage[T1]{fontenc}
 
 \usepackage{tikz}
-\usetikzlibrary{matrix,calc,3d,arrows,positioning}
+\usetikzlibrary{matrix,calc,3d,arrows,positioning,fadings}
 
 \usepackage{tikz-cd}
 \makeatletter
