attempt at rewriting 3.1

--- a/main.bib
+++ b/main.bib
@@ -696,6 +696,18 @@ MRREVIEWER = {Birgit Richter},
 MRREVIEWER = {J. Dieudonn{\'e}},
 }
 
+@BOOK{LurieHA,
+  author = {Lurie, Jacob},
+  title = {Higher Algebra},
+  note = {\url{http://www.math.harvard.edu/~lurie/papers/HA.pdf}, Accessed: 2016-09-22}
+}
+
+@BOOK{LurieSAG,
+  author = {Lurie, Jacob},
+  title = {Spectral Algebraic Geometry},
+  note = {\url{http://www.math.harvard.edu/~lurie/papers/SAG-rootfile.pdf}, Accessed: 2016-09-22}
+}
+
 @book {Margolis,
     AUTHOR = {Margolis, H. R.},
      TITLE = {Spectra and the {S}teenrod algebra},
