--- a/finite.tex
+++ b/finite.tex
@@ -251,10 +251,10 @@ If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{
 
 
 
-\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} I: Distance from \texorpdfstring{$\G_a$}{Ga}}\label{MfgI:Height}
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} I: The affine cover}\label{MfgI:AffineCover}
 
 \todo{Put a proper lead-in here.}
-\todo{This lecture may now be too long. Maybe some of the $p$--typical stuff is better suited for the next lecture anyway?}
+\todo{These three lectures are now kind of imbalanced.  The $p$--typical discussion is really long, and Lazard's theorem is not that hard.  They should be rebalanced.}
 
 Today, we will embark on this analysis by studying the scheme $\moduli{fgl}$ which naturally covers the stack $\moduli{fg}$.
 
@@ -345,6 +345,15 @@ By applying the functor $\InternalHom{FormalGroups}(-, \G_a)(k)$, we get a cosim
 \end{itemize}
 This finally concludes the proof of \Cref{LazardsTheorem}.
 \end{proof}
+
+
+
+
+
+
+
+
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} II: Large scales}\label{MfgII:LargeScales}
 
 \todo{Also, people seem to say things about the Mischenko logarithm rather than the invariant differential, but I wonder if we should phrase things in those terms.}
 \todo[inline]{Section 12 of Neil's FG notes talk about the infinite height subscheme of $\moduli{fgl}$. He compares it to $H_* MO$ and to the Hurewicz image $\pi_* MU \to H_*(MU; \F_p)$.}
@@ -451,11 +460,7 @@ Replace the formal group law by its $p$--typification.  Based on \Cref{RecoverLo
 
 \todo{You could be clearer about the varying assumptions on the ground rings in these different theorems.  Some need to work over $k$, others work over any $\Z_{(p)}$--algebra.}
 
-
-
-
-
-\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} II: Large scales}
+\todo{Old section break.}
 
 With the notion of ``height'' firmly in hand, we are now in a position to classify the geometric points of $\moduli{fg}$.
 
