--- a/main.tex
+++ b/main.tex
@@ -63,6 +63,8 @@
 
 \todo[inline]{Be consistent about ``$\S$'' versus ``$\S^0$'' for the standard sphere spectrum.}
 
+\todo[inline]{The AGT style guide says that ``---'' should not have spaces on either side.}
+
 
 
 
