some more gross-hopkins citations

--- a/main.bib
+++ b/main.bib
@@ -634,6 +634,23 @@ MRREVIEWER = {Bj{\"o}rn Schuster},
 MRREVIEWER = {Joel M. Cohen},
 }
 
+@article {Kohlhaase,
+    AUTHOR = {Kohlhaase, Jan},
+     TITLE = {On the {I}wasawa theory of the {L}ubin-{T}ate moduli space},
+   JOURNAL = {Compos. Math.},
+  FJOURNAL = {Compositio Mathematica},
+    VOLUME = {149},
+      YEAR = {2013},
+    NUMBER = {5},
+     PAGES = {793--839},
+      ISSN = {0010-437X},
+   MRCLASS = {14L05 (11S23 22D10)},
+  MRNUMBER = {3069363},
+MRREVIEWER = {Alan Koch},
+       DOI = {10.1112/S0010437X12000723},
+       URL = {http://dx.doi.org/10.1112/S0010437X12000723},
+}
+
 @article {Lazard,
     AUTHOR = {Lazard, Michel},
      TITLE = {Sur les groupes de {L}ie formels \`a un param\`etre},
@@ -1294,4 +1311,20 @@ MRREVIEWER = {J. Stasheff},
 MRREVIEWER = {W. Stephen Wilson},
        DOI = {10.1112/jlms/s2-22.3.423},
        URL = {http://dx.doi.org/10.1112/jlms/s2-22.3.423},
+}
+
+@article {Yu,
+    AUTHOR = {Yu, Jiu-Kang},
+     TITLE = {On the moduli of quasi-canonical liftings},
+   JOURNAL = {Compositio Math.},
+  FJOURNAL = {Compositio Mathematica},
+    VOLUME = {96},
+      YEAR = {1995},
+    NUMBER = {3},
+     PAGES = {293--321},
+      ISSN = {0010-437X},
+     CODEN = {CMPMAF},
+   MRCLASS = {11S31 (14L05)},
+  MRNUMBER = {1327148},
+       URL = {http://www.numdam.org/item?id=CM_1995__96_3_293_0},
 }
