note about possible mis-statement

--- a/quillen.tex
+++ b/quillen.tex
@@ -94,6 +94,7 @@ Pointed maps $\A^n \to \A^m$ naturally biject with $m$--tuples of $n$--variate p
 The preceding Lemma shows how formal varieties are especially nice, because maps between them can be boiled down to statements about power series.\footnote{In some sense, this Lemma is a full explanation for why anyone would even think to involve formal geometry in algebraic topology (nevermind how useful the program has been in the long run).  Calculations in algebraic topology have long been expressed in terms of power series rings, and with this Lemma we are provided geometric interpretations for such statements.}  In particular, this allows local theorems from analytic differential geometry to be imported, including a version of the inverse function theorem.
 
 \begin{theorem}\label{InverseFunctionTheoremForFVars}\citeme{This is 3.1.8 in the Crystals notes.}
+\todo{Wait a second, have you introduced this terminology yet?}
 A pointed map $f\co V \to W$ of finite--dimensional formal varieties is an isomorphism if and only if the induced map $T_0 f\co T_0 V \to T_0 W$ is an isomorphism of $R$--modules.
 \end{theorem}
 \begin{proof}
