--- a/main.bib
+++ b/main.bib
@@ -651,6 +651,21 @@ MRREVIEWER = {Alan Koch},
        URL = {http://dx.doi.org/10.1112/S0010437X12000723},
 }
 
+@article {Landweber,
+    AUTHOR = {Landweber, Peter S.},
+     TITLE = {Invariant regular ideals in {B}rown-{P}eterson homology},
+   JOURNAL = {Duke Math. J.},
+  FJOURNAL = {Duke Mathematical Journal},
+    VOLUME = {42},
+      YEAR = {1975},
+    NUMBER = {3},
+     PAGES = {499--505},
+      ISSN = {0012-7094},
+   MRCLASS = {55G25},
+  MRNUMBER = {0385859},
+MRREVIEWER = {A. Liulevicius},
+}
+
 @article {Lazard,
     AUTHOR = {Lazard, Michel},
      TITLE = {Sur les groupes de {L}ie formels \`a un param\`etre},
@@ -747,6 +762,19 @@ MRREVIEWER = {J. Dieudonn{\'e}},
 MRREVIEWER = {Andrzej Kozlowski},
 }
 
+@BOOK{MillerNotesCobordism,
+  author = {Miller, Haynes},
+  title = {Notes on Cobordism},
+  note = {\url{www-math.mit.edu/~hrm/papers/cobordism.pdf}, Accessed: 2016-10-04}
+}
+
+@ARTICLE{MillerSheavesGradings,
+  author = {Miller, Haynes},
+  title = {Sheaves, gradings, and the exact functor theorem},
+  journal = {Unpublished},
+  URL = {http://www-math.mit.edu/~hrm/papers/bcat.pdf}
+}
+
 @incollection {Milne,
     AUTHOR = {Milne, J. S.},
      TITLE = {Abelian varieties},
@@ -784,13 +812,6 @@ MRREVIEWER = {G. Hirsch},
    MRCLASS = {55.40 (55.34)},
   MRNUMBER = {0174052},
 MRREVIEWER = {I. M. James},
-}
-
-@ARTICLE{Miller,
-  author = {Miller, Haynes},
-  title = {Sheaves, gradings, and the exact functor theorem},
-  journal = {Unpublished},
-  URL = {http://www-math.mit.edu/~hrm/papers/bcat.pdf}
 }
 
 @inproceedings {Mitchell,
