--- a/quillen.tex
+++ b/quillen.tex
@@ -856,7 +856,7 @@ The second formula is a direct consequence of the first.  The first formula come
 allows us to pair $x^{MU}$ with $(x^E)^{j+1}$ to determine the coefficients of the series.
 \end{proof}
 
-\begin{corollary}[{\cite[Corollary 6.6]{AdamsBlueBook}}]
+\begin{corollary}[{\cite[Corollary 6.6]{AdamsBlueBook}}]\label{HZMUCarriesALog}
 In particular, for the orientation $MU \to H\Z$ we have \[x_1 +_{MU} x_2 = \exp^H(\log^H(x_1) + \log^H(x_2)),\] where $\exp^H(x) = \sum_{j=0}^\infty b_j x^{j+1}$. \qed
 \end{corollary}
 
