--- a/mo.tex
+++ b/mo.tex
@@ -761,7 +761,7 @@ f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 Because we assumed $b_0 = 1$ and $f_2$ is concentrated in power--of--$2$ degrees, it follows that $f_2$ gives a point $f_2 \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_2^{-1}(f(x))$, which has an analogous decomposition into series $g_2(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_2(x) = x$ and that $f_2$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.
 \end{proof}
 
-\begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]
+\begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
 $\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1, j \ge 1]$ with $|b_j| = j$.
 \end{corollary}
 \begin{proof}
@@ -777,7 +777,7 @@ Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_
 
 This is pretty remarkable: some statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  The connection between these two problems seems fairly miraculous: we needed a small object, $\RP^\infty$, which controlled the whole story; we needed to be able to compute everything about it; and we needed various other ``generation'' or ``freeness'' results to work out in our favor.  It is not obvious that we will get this lucky twice, should we try to reapply these ideas to other cases.  Nevertheless, trying to push our luck as far as possible is the main thrust of the rest of the book.  We could close this section with this accomplishment, but there are two easy consequences of this calculation that are worth recording before we leave.
 
-\begin{lemma}
+\begin{lemma}\label{MOSplitsIntoHF2s}
 $MO$ splits as a wedge of shifts of $H\F_2$.
 \end{lemma}
 \begin{proof}
