--- a/finite.tex
+++ b/finite.tex
@@ -611,6 +611,11 @@ Specialize now to the case of a field $k$ of characteristic $p$.  Since the addi
 It's worth pointing out how strange all of this is. In Euclidean geometry, open subspaces are always top-dimensional, and closed subspaces can drop dimension.  Here, proper open substacks of every dimension appear, and every nonempty closed substack is $\infty$--dimensional (albeit of positive codimension).
 \end{remark}
 
+\begin{remark}
+The results of this section have several alternative forms in the literature.  For instance, $[p]_\phi(x)$ can also be expressed as \[[p]_\phi(x) = px + v_1 x^p + v_2 x^{p^2} + \cdots + v_d x^{p^d} + \cdots,\] and this also determines a presentation of $\sheaf O_{\moduli{fgl}^{\ptyp}}$.  These other elements $v_d$, called \textit{Hazewinkel coordinates}, differ substantially from the Kudo--Araki coordinates favored here, although they are equally ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.
+\todo{The end of this remark could be beefed up by mentioning some of the stuff around Question 100 in the $E$--theory seminar notes.}
+\end{remark}
+
 \todo{I'm not sure where this goes --- maybe it goes right here --- but Allen told me how to give a nice proof of this fact.  He didn't give me a citation for this, but the main point was that flatness can be checked locally, so the general formula for the pullback $\mathcal M_{(A_1, \Gamma_1)} \to \mathcal M_{(L, W)} \from \mathcal M_{(A_2, \Gamma_2)}$ being $\mathcal M_{(A_1 \otimes W \otimes A_2, \Gamma_1 \otimes W \otimes \Gamma_2)}$ specializes to compute the pullback of $\Spec A \to \mathcal M_{(L, W)} \from \Spec E(d)_*$ to be $\mathcal M_{(A \otimes W \otimes E(d)_*, A \otimes W \otimes E(d)_*)} = \Spec (A \otimes W \otimes E(d)_*)$.  But the map $\Spec A \to \mathcal M_{(L, W)}$ factors through $\Spec L$, so it suffices just to check flatness for $\Spec L \otimes_L W \otimes_L E(d)_* \cong \Spec W \otimes_L E(d)_* \to \Spec E(d)_*$, which you finally do by hand.}
 \todo{Also, people seem to say things about the Mischenko logarithm rather than the invariant differential, but I wonder if we should phrase things in those terms.}
 
