--- a/main.bib
+++ b/main.bib
@@ -1069,6 +1069,18 @@ MRREVIEWER = {David C. Johnson},
        URL = {http://dx.doi.org/10.1023/A:1007776725714},
 }
 
+@ARTICLE{RezkFelixKlein,
+  author = {Rezk, Charles},
+  title = {Elliptic Cohomology and Elliptic Curves (Felix Klein lectures, Bonn 2015)},
+  note = {\url{http://www.math.uiuc.edu/~rezk/felix-klein-lectures-notes.pdf}, Accessed: 2016-10-07}
+}
+
+@ARTICLE{RezkNotesOnHMThm,
+  author = {Rezk, Charles},
+  title = {Notes on the Hopkins--Miller Theorem},
+  note = {\url{www.math.uiuc.edu/~rezk/hopkins-miller-thm.pdf}, Accessed: 2016-10-07}
+}
+
 @book {Rudyak,
     AUTHOR = {Rudyak, Yuli B.},
      TITLE = {On {T}hom spectra, orientability, and cobordism},
@@ -1158,6 +1170,24 @@ MRREVIEWER = {H. Wada},
 MRREVIEWER = {John Hunton},
        DOI = {10.1016/S0040-9383(97)00054-2},
        URL = {http://dx.doi.org/10.1016/S0040-9383(97)00054-2},
+}
+
+@article {StricklandFiniteSubgps,
+    AUTHOR = {Strickland, Neil P.},
+     TITLE = {Finite subgroups of formal groups},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {121},
+      YEAR = {1997},
+    NUMBER = {2},
+     PAGES = {161--208},
+      ISSN = {0022-4049},
+     CODEN = {JPAAA2},
+   MRCLASS = {14L05 (55N22)},
+  MRNUMBER = {1473889},
+MRREVIEWER = {Antoine Chambert-Loir},
+       DOI = {10.1016/S0022-4049(96)00113-2},
+       URL = {http://dx.doi.org/10.1016/S0022-4049(96)00113-2},
 }
 
 @misc{StricklandFGNotes,
