--- a/unknowns.tex
+++ b/unknowns.tex
@@ -94,7 +94,7 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 
 
-\section{The period map}
+\section{The period map}\label{ThePeriodMapSection}
 
 \todo{pp.\ 42-43 of FPFP has some easy-to-state results about this collected.}
 \todo{Kohlhaase~\cite{Kohlhaase} references Yu~\cite{Yu} for having closed formulas generalizing the Hopkins--Gross example section.}
